--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,62 @@
-alabaster==0.7.12
-altgraph==0.16.1
-applescript==2018.11.19
-argh==0.26.2
-attrs==19.1.0
-auto-py-to-exe==2.5.1
-Babel==2.6.0
-backports.functools-lru-cache==1.5
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.7.1
-bottle==0.12.16
-bottle-websocket==0.2.9
-bs4==0.0.1
-certifi==2018.11.29
-cffi==1.11.5
-chainer==5.2.0
+astroid==2.2.5
+autopep8==1.4.4
+certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
-cloudpickle==0.7.0
 colorama==0.4.1
-cycler==0.10.0
-Cython==0.29.1
-dask==1.1.0
-decorator==4.3.0
-detect==2018.11.19
-dis3==0.1.3
-Django==1.11.18
-docutils==0.14
-Eel==0.9.10
-enum34==1.1.6
-filelock==3.0.10
-Flask==1.0.2
-functools32==3.2.3.post2
+Cython==0.29.3
+decorator==4.4.0
+Django==2.2.1
+django-six==1.0.4
+Flask==1.0.3
 future==0.17.1
-futures==3.2.0
-gevent==1.3.7
-gevent-websocket==0.10.1
-gitdb2==2.0.5
-GitPython==2.1.11
-greenlet==0.4.15
-h5py==2.9.0
 idna==2.8
-imageio==2.4.1
-imagesize==1.1.0
-ipython==5.8.0
-ipython-genutils==0.2.0
+imageio==2.5.0
+imageio-ffmpeg==0.3.0
+importlib-metadata==0.17
+isort==4.3.19
 itsdangerous==1.1.0
-jedi==0.13.1
-Jinja2==2.10
-jsonschema==3.0.1
-Keras==2.2.4
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
-Kivy==1.10.1
-kivy-designer==0.1.dev0
-Kivy-Garden==0.1.4
-kivy.deps.glew==0.1.10
-kivy.deps.gstreamer==0.1.13
-kivy.deps.sdl2==0.1.18
-kiwisolver==1.0.1
-linecache2==1.0.0
-macholib==1.11
+jedi==0.13.3
+Jinja2==2.10.1
+lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
-matplotlib==2.2.3
+mccabe==0.6.1
 moviepy==1.0.0
-mp3-tagger==1.0
-mutagen==1.42.0
-networkx==2.2
-numpy==1.15.4
-only==2018.11.20
-opencv-python==3.4.4.19
-packaging==19.0
-pafy==0.5.4
-parso==0.3.1
-pathlib2==2.3.3
-pathtools==0.1.2
-pefile==2018.8.8
-pickleshare==0.7.5
-Pillow==5.4.1
+networkx==2.3
+numpy==1.16.0
+opencv-python==4.1.0.25
+parso==0.4.0
+pathlib==1.0.1
+Pillow==6.0.0
+pluggy==0.12.0
 proglog==0.1.9
-prompt-toolkit==1.0.15
-protobuf==3.6.1
-psutil==5.4.8
-public==2018.11.20
-pycparser==2.19
-pygame==1.9.4
-Pygments==2.3.0
-pyinstaller==3.4
-PyMouse==1.0
-pynput==1.4
-pyparsing==2.3.1
-pyperclip==1.7.0
-pypiwin32==223
-PyQt4==4.11.4
-pyrsistent==0.14.11
-PySciter==0.4.28
-python-dateutil==2.7.5
-python-vlc==3.0.4106
-pythonnet==2.3.0
+PyAutoGUI==0.9.44
+pycodestyle==2.5.0
+pydocstyle==3.0.0
+pyflakes==2.1.1
+PyGetWindow==0.0.5
+pylint==2.3.1
+PyMsgBox==1.0.6
+pynput==1.4.2
+PyRect==0.1.4
+PyScreeze==0.1.21
+python-jsonrpc-server==0.1.2
+python-language-server==0.26.1
 pytube==9.5.1
-pytz==2018.7
-PyWavelets==1.0.1
-pywebview==2.2.1
-pywin32==224
-pywin32-ctypes==0.2.0
-PyYAML==3.13
-qtmodern==0.1.4
-QtPy==1.7.0
-requests==2.21.0
-runcmd==2018.12.14
-scandir==1.9.0
-scikit-image==0.14.2
-scikit-learn==0.20.2
+PyTweening==1.0.3
+pytz==2019.1
+PyWavelets==1.0.3
+requests==2.22.0
+rope==0.14.0
+scikit-image==0.15.0
 scipy==1.2.0
-simplegeneric==0.8.1
 six==1.12.0
-sklearn==0.0
-smmap2==2.0.5
 snowballstemmer==1.2.1
-soupsieve==1.8
-Sphinx==1.8.5
-sphinxcontrib-websupport==1.1.0
-temp==2018.11.20
-tinytag==1.0.0
-toolz==0.9.0
-tqdm==4.31.1
-traitlets==4.3.2
-typing==3.6.6
-Unidecode==1.0.23
-urllib3==1.24.1
-virtualenv==16.5.0
-watchdog==0.9.0
-wcwidth==0.1.7
-Werkzeug==0.14.1
-whichcraft==0.5.2
-win-unicode-console==0.5
-WTForms==2.2.1
-youtube-dl==2019.1.10
+sqlparse==0.3.0
+tqdm==4.32.2
+typed-ast==1.3.5
+urllib3==1.25.3
+Werkzeug==0.15.4
+wrapt==1.11.1
+yapf==0.27.0
+zipp==0.5.1
