--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,66 @@
-astroid==2.2.5
-autopep8==1.4.4
-certifi==2019.6.16
+apt-xapian-index==0.47
+apturl==0.5.2
+asn1crypto==0.24.0
+Brlapi==0.6.6
+certifi==2018.1.18
 chardet==3.0.4
 Click==7.0
-colorama==0.4.1
-Cython==0.29.3
-decorator==4.4.0
-Django==2.2.1
-django-six==1.0.4
-ffmpeg==1.4
-ffmpeg-python==0.1.18
+command-not-found==0.3
+cryptography==2.1.4
+cupshelpers==1.0
+defer==1.0.6
+distro-info==0.18
 Flask==1.0.3
-future==0.17.1
 gunicorn==19.9.0
-idna==2.8
-imageio==2.5.0
-imageio-ffmpeg==0.3.0
-importlib-metadata==0.17
-isort==4.3.19
+httplib2==0.9.2
+idna==2.6
 itsdangerous==1.1.0
-jedi==0.13.3
 Jinja2==2.10.1
-lazy-object-proxy==1.4.1
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.0.7
 MarkupSafe==1.1.1
-mccabe==0.6.1
-moviepy==1.0.0
-networkx==2.3
-numpy==1.16.0
-opencv-python==4.1.0.25
-parso==0.4.0
+netifaces==0.10.4
+oauth==1.0.1
+olefile==0.45.1
 pathlib==1.0.1
-Pillow==6.0.0
-pluggy==0.12.0
-proglog==0.1.9
-PyAutoGUI==0.9.44
-pycodestyle==2.5.0
-pydocstyle==3.0.0
-pyee==6.0.0
-pyflakes==2.1.1
-PyGetWindow==0.0.5
-pylint==2.3.1
-PyMsgBox==1.0.6
-pynput==1.4.2
-PyRect==0.1.4
-PyScreeze==0.1.21
-python-ffmpeg==1.0.8
-python-jsonrpc-server==0.1.2
-python-language-server==0.26.1
+pexpect==4.2.1
+Pillow==5.1.0
+protobuf==3.0.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pygobject==3.26.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pyRFC3339==1.0
+python-apt==1.6.3
+python-debian==0.1.32
+python-dotenv==0.10.3
 pytube==9.5.1
-PyTweening==1.0.3
-pytz==2019.1
-PyWavelets==1.0.3
-requests==2.22.0
-rope==0.14.0
-scikit-image==0.15.0
-scipy==1.2.0
-six==1.12.0
-snowballstemmer==1.2.1
-sqlparse==0.3.0
-tqdm==4.32.2
-typed-ast==1.3.5
-urllib3==1.25.3
+pytz==2018.3
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.11.0
+system-service==0.3
+systemd-python==234
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+wadllib==1.3.2
 Werkzeug==0.15.4
-wrapt==1.11.1
-yapf==0.27.0
-zipp==0.5.1
+xkit==0.0.0
+zope.interface==4.3.2
