--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ PyMsgBox==1.0.6
 pynput==1.4.2
 PyRect==0.1.4
 PyScreeze==0.1.21
+python-dotenv==0.10.3
 python-ffmpeg==1.0.8
 python-jsonrpc-server==0.1.2
 python-language-server==0.26.1
